--- a/package.json
+++ b/package.json
@@ -4,20 +4,30 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "proxy": "run-p proxy:*",
+    "proxy:proxy": "local-ssl-proxy --key .\\certificates\\localhost-key.pem --cert .\\certificates\\localhost.pem --source 3000 --target 3001",
+    "proxy:dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.2",
     "@types/node": "20.4.4",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
-    "license-checker": "^25.0.1",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/formidable": "^3.4.3",
+    "license-checker": "^25.0.1",
+    "local-ssl-proxy": "^2.0.5",
+    "npm-run-all": "^4.1.5"
   }
 }
